error: missing field 'mpl' initializer in wtf/threads/Signals.cpp https://bugs.webkit.org/show_bug.cgi?id=272418 rdar://124636304

Reviewed by Darin Adler.

Fix build error in Signals.cpp with the newer SDKs. Some of the
`mach_port_options_t` data members were missing from the initializer.

To address the issue, we now memset(0) the options after constructing
it.

* Source/WTF/wtf/threads/Signals.cpp:
(WTF::initMachExceptionHandlerThread):

Canonical link: https://commits.webkit.org/277272@main